# simp-base

./: .gitmodules  CMakeLists.txt
api/plugins/: mesh.hpp
api/simp/mesh/: meshloader.hpp
physx/: CMakeLists.txt
plugins/aimesh/: CMakeLists.txt
plugins/aimesh/source/: loader.cpp  loader.hpp  plugin.cpp
plugins/o3d/: CMakeLists.txt
plugins/o3d/source/: loader.cpp  loader.hpp  plugin.cpp
shaders/: CMakeLists.txt  legacy.frag.hlsl  output.cginc  static.vert.hlsl  tonemap.cginc
source/: main.cpp  simp.cpp  simp.hpp
source/blueprints/: mapobjectblueprint.cpp  mapobjectblueprint.hpp  materialblueprint.cpp  materialblueprint.hpp  modelblueprint.cpp  modelblueprint.hpp  sceneryblueprint.cpp  sceneryblueprint.hpp  scriptblueprint.cpp  scriptblueprint.hpp  splineblueprint.cpp  splineblueprint.hpp  vehicleblueprint.cpp  vehicleblueprint.hpp
source/core/: event.cpp  event.hpp  graphics.cpp  graphics.hpp  window.cpp  window.hpp  winmsgtranslator.cpp  winmsgtranslator.hpp
source/filesystem/: assetmgr.hpp  blueprintmanagers.cpp  cfgfile.cpp  cfgfile.hpp  file.cpp  file.hpp  managers.hpp  meshloader.cpp  meshloader.hpp  meshmanager.cpp  texturemanager.cpp
source/plugin/: legacy.cpp  legacy.hpp
source/scene/: animcomponents.cpp  animcomponents.hpp  frustum.cpp  frustum.hpp  global.cpp  global.hpp  materialcomponents.cpp  materialcomponents.hpp  physicscomponents.cpp  physicscomponents.hpp  rendercomponents.cpp  rendercomponents.hpp  scene.cpp  scene.hpp  scriptcomponents.cpp  scriptcomponents.hpp  tile.cpp  tile.hpp  transformcomponents.cpp  transformcomponents.hpp
source/visual/: henlo.txt  mesh.cpp  mesh.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp
source/visual/spatialsort/: SpatialSort.cpp  SpatialSort.hpp
utils/: CMakeLists.txt
utils/utils/: CP1252_to_UTF8.hpp  Windows.hpp  assert.hpp  dict.hpp  utf8_check_is_valid.hpp
